feature: implementa metodos do use case